--- a/BallonBattle/BallonBattle1.1.html
+++ b/BallonBattle/BallonBattle1.1.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>球球小作战BalloonBattle1.1</title>
+		<title>球球小作战BalloonBattle</title>
 		<link rel="stylesheet" type="text/css" href="css/common.css"/>
 		<link rel="stylesheet" type="text/css" href="css/balloonbattle.css"/>
 	</head>
